--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #f5f5f5;
-    padding: 60px 0;
+    padding: 60px 0 100px 0;
 }
 
 .container {
