--- a/style.css
+++ b/style.css
@@ -43,13 +43,18 @@ h1 a {
     text-decoration: none;
 }
 
+.header-title a {
+    color: #2c3e50;
+    text-decoration: none;
+}
+
 
 .avatar {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
-    border: 2px solid #e0e0e0;
+    /* border: 2px solid #e0e0e0; */
 }
 
 .avatar-link {
