--- a/style.css
+++ b/style.css
@@ -54,7 +54,13 @@ h1 a {
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
+    transition: all 0.3s ease-in-out;
     /* border: 2px solid #e0e0e0; */
+}
+
+.avatar:hover {
+    /* scale: 1.1;    */
+    filter: brightness(1.04);
 }
 
 .avatar-link {
